# claude-kyarameru-toolbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: PERMISSIONS.md  agents  quality-gate.sh  settings.json  skills
.claude-plugin/: marketplace.json
.claude/skills/kairos-release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/moira/: Cargo.toml  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
apps/moira/src/: main.rs
docs/: contributing.md  plugins.md  troubleshooting.md
docs/distribution/: getting-started.md  repository-layout.md
plugins/: README.md
plugins/bundles/greece-roles/: README.md
plugins/bundles/muse-design/: README.md
plugins/design/dionysus-motion/: README.md
plugins/design/muse-avantgarde/: README.md
plugins/design/muse-bold/: README.md
plugins/design/muse-cute/: README.md
plugins/roles/: README.md
scripts/: toolbox-manager.py  validate-toolbox.py  validate.py
tests/: test-toolbox-manager.py  test-validate-toolbox.py  test_run_gate.py  test_validate.py
toolbox/: CLAUDE.md  README.md  settings.json
toolbox-greece/: CLAUDE.md  README.md  settings.json
toolbox-greece/agents/: README.md  aphrodite.md  ares.md  chronos.md  hephaestus.md  khaos.md  zeus.md
toolbox-greece/commands/: README.md
toolbox-greece/hooks/: README.md  run-pytest.sh  run-validate-toolbox.sh
toolbox-greece/mcp/: README.md
toolbox-greece/memory/: README.md
toolbox-greece/plugins/: README.md
toolbox-greece/skills/: README.md
toolbox/agents/: README.md
(+114 files in other folders)
