[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-kyarameru-toolbox"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
python_files = ["test_*.py"]
