[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-kyarameru-toolbox"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "ruff>=0.15.20"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle(E,W) + pyflakes(F) + isort(I) + pyupgrade(UP) + bugbear(B)。
select = ["E", "W", "F", "I", "UP", "B"]
